--- a/test.ipynb
+++ b/test.ipynb
@@ -4,12 +4,23 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "import src\n",
+    "import tikzfeynwrap as src\n",
     "\n",
-    "tikz = src.TikzFeynWrap()\n",
+    "tikz = src.TikzFeynWrap(image=\"tikz\",version=None)\n",
     "tikz.startup()"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<tikzfeynwrap.container.TikzFeynWrap at 0x7f9e10011190>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 1
+    }
+   ],
    "metadata": {}
   },
   {
@@ -39,13 +50,67 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "tex= r\"\"\"\n",
+    "\\feynmandiagram [horizontal=a to b] {\n",
+    "i1 [particle=\\(e^{-}\\)] -- [fermion] a -- [fermion] i2 [particle=\\(e^{+}\\)],\n",
+    "a -- [photon, edge label=\\(\\gamma\\), momentum'=\\(k\\)] b,\n",
+    "f1 [particle=\\(\\mu^{+}\\)] -- [fermion] b -- [fermion] f2 [particle=\\(\\mu^{-}\\)],\n",
+    "\n",
+    "};\"\"\"\n",
+    "\n",
+    "\n",
+    "tikz(tex)"
+   ],
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "image/svg+xml": "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"124.49pt\" height=\"85.337pt\" viewBox=\"0 0 124.49 85.337\" version=\"1.1\">\n<defs>\n<g>\n<symbol overflow=\"visible\" id=\"glyph0-0\">\n<path style=\"stroke:none;\" d=\"\"/>\n</symbol>\n<symbol overflow=\"visible\" id=\"glyph0-1\">\n<path style=\"stroke:none;\" d=\"M 2.859375 -6.8125 C 2.859375 -6.8125 2.859375 -6.921875 2.734375 -6.921875 C 2.5 -6.921875 1.78125 -6.84375 1.515625 -6.8125 C 1.4375 -6.8125 1.328125 -6.796875 1.328125 -6.625 C 1.328125 -6.5 1.421875 -6.5 1.5625 -6.5 C 2.046875 -6.5 2.0625 -6.4375 2.0625 -6.328125 L 2.03125 -6.125 L 0.59375 -0.390625 C 0.546875 -0.25 0.546875 -0.234375 0.546875 -0.171875 C 0.546875 0.0625 0.75 0.109375 0.84375 0.109375 C 0.96875 0.109375 1.109375 0.015625 1.171875 -0.09375 C 1.21875 -0.1875 1.671875 -2.03125 1.734375 -2.28125 C 2.078125 -2.25 2.890625 -2.09375 2.890625 -1.4375 C 2.890625 -1.359375 2.890625 -1.328125 2.859375 -1.21875 C 2.84375 -1.109375 2.828125 -0.984375 2.828125 -0.875 C 2.828125 -0.296875 3.21875 0.109375 3.734375 0.109375 C 4.03125 0.109375 4.3125 -0.046875 4.53125 -0.421875 C 4.78125 -0.859375 4.890625 -1.40625 4.890625 -1.421875 C 4.890625 -1.53125 4.796875 -1.53125 4.765625 -1.53125 C 4.671875 -1.53125 4.65625 -1.484375 4.625 -1.34375 C 4.421875 -0.625 4.203125 -0.109375 3.765625 -0.109375 C 3.5625 -0.109375 3.4375 -0.21875 3.4375 -0.578125 C 3.4375 -0.75 3.484375 -0.984375 3.515625 -1.140625 C 3.5625 -1.3125 3.5625 -1.34375 3.5625 -1.453125 C 3.5625 -2.09375 2.9375 -2.375 2.078125 -2.5 C 2.390625 -2.671875 2.71875 -2.984375 2.9375 -3.234375 C 3.421875 -3.765625 3.875 -4.1875 4.359375 -4.1875 C 4.421875 -4.1875 4.4375 -4.1875 4.453125 -4.171875 C 4.578125 -4.15625 4.578125 -4.15625 4.671875 -4.09375 C 4.6875 -4.09375 4.6875 -4.078125 4.703125 -4.0625 C 4.234375 -4.03125 4.140625 -3.640625 4.140625 -3.515625 C 4.140625 -3.359375 4.25 -3.171875 4.515625 -3.171875 C 4.78125 -3.171875 5.0625 -3.390625 5.0625 -3.78125 C 5.0625 -4.078125 4.828125 -4.40625 4.390625 -4.40625 C 4.109375 -4.40625 3.65625 -4.328125 2.9375 -3.53125 C 2.59375 -3.15625 2.203125 -2.75 1.828125 -2.609375 Z M 2.859375 -6.8125 \"/>\n</symbol>\n<symbol overflow=\"visible\" id=\"glyph0-2\">\n<path style=\"stroke:none;\" d=\"M 0.40625 -2.53125 C 0.796875 -3.671875 1.890625 -3.6875 2 -3.6875 C 3.5 -3.6875 3.609375 -1.9375 3.609375 -1.15625 C 3.609375 -0.546875 3.5625 -0.375 3.484375 -0.171875 C 3.265625 0.546875 2.96875 1.703125 2.96875 1.96875 C 2.96875 2.078125 3.015625 2.140625 3.09375 2.140625 C 3.234375 2.140625 3.3125 1.921875 3.421875 1.546875 C 3.65625 0.703125 3.75 0.140625 3.78125 -0.171875 C 3.8125 -0.296875 3.828125 -0.421875 3.875 -0.5625 C 4.1875 -1.546875 4.828125 -3.03125 5.21875 -3.8125 C 5.296875 -3.9375 5.40625 -4.15625 5.40625 -4.203125 C 5.40625 -4.296875 5.3125 -4.296875 5.296875 -4.296875 C 5.265625 -4.296875 5.203125 -4.296875 5.171875 -4.234375 C 4.65625 -3.28125 4.25 -2.28125 3.859375 -1.28125 C 3.84375 -1.578125 3.84375 -2.34375 3.453125 -3.3125 C 3.203125 -3.921875 2.8125 -4.40625 2.125 -4.40625 C 0.875 -4.40625 0.171875 -2.890625 0.171875 -2.578125 C 0.171875 -2.484375 0.265625 -2.484375 0.375 -2.484375 Z M 0.40625 -2.53125 \"/>\n</symbol>\n<symbol overflow=\"visible\" id=\"glyph0-3\">\n<path style=\"stroke:none;\" d=\"M 1.859375 -2.296875 C 2.15625 -2.296875 2.890625 -2.328125 3.390625 -2.53125 C 4.09375 -2.828125 4.140625 -3.421875 4.140625 -3.5625 C 4.140625 -4 3.765625 -4.40625 3.078125 -4.40625 C 1.96875 -4.40625 0.453125 -3.4375 0.453125 -1.6875 C 0.453125 -0.671875 1.046875 0.109375 2.03125 0.109375 C 3.453125 0.109375 4.28125 -0.953125 4.28125 -1.0625 C 4.28125 -1.125 4.234375 -1.203125 4.171875 -1.203125 C 4.109375 -1.203125 4.09375 -1.171875 4.03125 -1.09375 C 3.25 -0.109375 2.15625 -0.109375 2.046875 -0.109375 C 1.265625 -0.109375 1.171875 -0.953125 1.171875 -1.265625 C 1.171875 -1.390625 1.1875 -1.6875 1.328125 -2.296875 Z M 1.390625 -2.515625 C 1.78125 -4.03125 2.8125 -4.1875 3.078125 -4.1875 C 3.53125 -4.1875 3.8125 -3.890625 3.8125 -3.5625 C 3.8125 -2.515625 2.21875 -2.515625 1.796875 -2.515625 Z M 1.390625 -2.515625 \"/>\n</symbol>\n<symbol overflow=\"visible\" id=\"glyph0-4\">\n<path style=\"stroke:none;\" d=\"M 2.296875 -3.5 C 2.359375 -3.703125 2.453125 -4.09375 2.453125 -4.140625 C 2.453125 -4.3125 2.328125 -4.40625 2.15625 -4.40625 C 2.140625 -4.40625 1.859375 -4.390625 1.765625 -4.046875 L 0.328125 1.71875 C 0.296875 1.84375 0.296875 1.859375 0.296875 1.890625 C 0.296875 2.03125 0.40625 2.15625 0.578125 2.15625 C 0.78125 2.15625 0.90625 1.96875 0.921875 1.9375 C 0.96875 1.859375 1.09375 1.328125 1.46875 -0.203125 C 1.796875 0.0625 2.25 0.109375 2.4375 0.109375 C 3.140625 0.109375 3.53125 -0.34375 3.765625 -0.625 C 3.859375 -0.171875 4.234375 0.109375 4.671875 0.109375 C 5.015625 0.109375 5.25 -0.125 5.40625 -0.4375 C 5.578125 -0.796875 5.703125 -1.40625 5.703125 -1.421875 C 5.703125 -1.53125 5.609375 -1.53125 5.578125 -1.53125 C 5.484375 -1.53125 5.46875 -1.484375 5.4375 -1.34375 C 5.28125 -0.703125 5.09375 -0.109375 4.6875 -0.109375 C 4.421875 -0.109375 4.390625 -0.375 4.390625 -0.5625 C 4.390625 -0.78125 4.5 -1.25 4.578125 -1.609375 L 4.859375 -2.6875 C 4.890625 -2.828125 5 -3.203125 5.03125 -3.359375 C 5.078125 -3.59375 5.1875 -3.96875 5.1875 -4.03125 C 5.1875 -4.203125 5.046875 -4.296875 4.890625 -4.296875 C 4.84375 -4.296875 4.578125 -4.28125 4.5 -3.953125 L 4.03125 -2.078125 C 3.921875 -1.578125 3.8125 -1.171875 3.78125 -1.0625 C 3.765625 -1.015625 3.296875 -0.109375 2.484375 -0.109375 C 1.984375 -0.109375 1.75 -0.4375 1.75 -0.984375 C 1.75 -1.265625 1.8125 -1.546875 1.890625 -1.828125 Z M 2.296875 -3.5 \"/>\n</symbol>\n<symbol overflow=\"visible\" id=\"glyph1-0\">\n<path style=\"stroke:none;\" d=\"\"/>\n</symbol>\n<symbol overflow=\"visible\" id=\"glyph1-1\">\n<path style=\"stroke:none;\" d=\"M 5.1875 -1.578125 C 5.296875 -1.578125 5.46875 -1.578125 5.46875 -1.734375 C 5.46875 -1.921875 5.296875 -1.921875 5.1875 -1.921875 L 1.03125 -1.921875 C 0.921875 -1.921875 0.75 -1.921875 0.75 -1.75 C 0.75 -1.578125 0.90625 -1.578125 1.03125 -1.578125 Z M 5.1875 -1.578125 \"/>\n</symbol>\n<symbol overflow=\"visible\" id=\"glyph2-0\">\n<path style=\"stroke:none;\" d=\"\"/>\n</symbol>\n<symbol overflow=\"visible\" id=\"glyph2-1\">\n<path style=\"stroke:none;\" d=\"M 3.21875 -1.578125 L 5.359375 -1.578125 C 5.453125 -1.578125 5.609375 -1.578125 5.609375 -1.734375 C 5.609375 -1.921875 5.453125 -1.921875 5.359375 -1.921875 L 3.21875 -1.921875 L 3.21875 -4.0625 C 3.21875 -4.140625 3.21875 -4.3125 3.0625 -4.3125 C 2.890625 -4.3125 2.890625 -4.15625 2.890625 -4.0625 L 2.890625 -1.921875 L 0.75 -1.921875 C 0.65625 -1.921875 0.484375 -1.921875 0.484375 -1.75 C 0.484375 -1.578125 0.640625 -1.578125 0.75 -1.578125 L 2.890625 -1.578125 L 2.890625 0.5625 C 2.890625 0.65625 2.890625 0.828125 3.046875 0.828125 C 3.21875 0.828125 3.21875 0.65625 3.21875 0.5625 Z M 3.21875 -1.578125 \"/>\n</symbol>\n</g>\n<clipPath id=\"clip1\">\n  <path d=\"M 124 0 L 124.488281 0 L 124.488281 1 L 124 1 Z M 124 0 \"/>\n</clipPath>\n<clipPath id=\"clip2\">\n  <path d=\"M 124 66 L 124.488281 66 L 124.488281 67 L 124 67 Z M 124 66 \"/>\n</clipPath>\n</defs>\n<g id=\"surface1\">\n<path style=\"fill:none;stroke-width:0.3985;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 6.858281 7.485344 L 31.350469 34.211906 \" transform=\"matrix(1,0,0,-1,18.38,68.958)\"/>\n<path style=\" stroke:none;fill-rule:nonzero;fill:rgb(0%,0%,0%);fill-opacity:1;\" d=\"M 39.960938 45.40625 L 33.492188 48.421875 L 37.519531 52.113281 Z M 39.960938 45.40625 \"/>\n<path style=\"fill:none;stroke-width:0.3985;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 31.350469 34.211906 L 6.577031 61.403312 \" transform=\"matrix(1,0,0,-1,18.38,68.958)\"/>\n<path style=\" stroke:none;fill-rule:nonzero;fill:rgb(0%,0%,0%);fill-opacity:1;\" d=\"M 34.867188 18.433594 L 37.289062 25.148438 L 41.328125 21.46875 Z M 34.867188 18.433594 \"/>\n<path style=\"fill:none;stroke-width:0.3985;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 37.819219 25.708 L 64.952031 25.708 \" transform=\"matrix(1,0,0,-1,18.38,68.958)\"/>\n<path style=\"fill-rule:nonzero;fill:rgb(0%,0%,0%);fill-opacity:1;stroke-width:0.3985;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 4.214495 0.00002 L 0.644182 1.34377 L 1.816057 0.00002 L 0.644182 -1.347636 Z M 4.214495 0.00002 \" transform=\"matrix(1,0,0,-1,81.61363,43.25002)\"/>\n<g style=\"fill:rgb(0%,0%,0%);fill-opacity:1;\">\n  <use xlink:href=\"#glyph0-1\" x=\"68.547\" y=\"53.489\"/>\n</g>\n<path style=\"fill:none;stroke-width:0.3985;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 31.350469 34.211906 L 31.862188 34.211906 L 32.377813 34.833 L 32.889531 35.290031 L 33.40125 35.458 L 33.916875 35.290031 L 34.428594 34.833 L 34.944219 34.211906 L 35.455938 33.590812 L 35.971563 33.133781 L 36.483281 32.965812 L 36.998906 33.133781 L 37.510625 33.590812 L 38.02625 34.211906 L 38.537969 34.833 L 39.053594 35.290031 L 39.565313 35.458 L 40.077031 35.290031 L 40.592656 34.833 L 41.104375 34.211906 L 41.62 33.590812 L 42.131719 33.133781 L 42.647344 32.965812 L 43.159063 33.133781 L 43.674688 33.590812 L 44.186406 34.211906 L 44.702031 34.833 L 45.21375 35.290031 L 45.729375 35.458 L 46.241094 35.290031 L 46.752813 34.833 L 47.268438 34.211906 L 47.780156 33.590812 L 48.295781 33.133781 L 48.8075 32.965812 L 49.323125 33.133781 L 49.834844 33.590812 L 50.350469 34.211906 L 50.862188 34.833 L 51.377813 35.290031 L 51.889531 35.458 L 52.405156 35.290031 L 52.916875 34.833 L 53.428594 34.211906 L 53.944219 33.590812 L 54.455938 33.133781 L 54.971563 32.965812 L 55.483281 33.133781 L 55.998906 33.590812 L 56.510625 34.211906 L 57.02625 34.833 L 57.537969 35.290031 L 58.053594 35.458 L 58.565313 35.290031 L 59.080938 34.833 L 60.104375 33.590812 L 60.62 33.133781 L 61.131719 32.965812 L 61.647344 33.133781 L 62.159063 33.590812 L 62.674688 34.211906 L 63.186406 34.833 L 63.702031 35.290031 L 64.21375 35.458 L 64.729375 35.290031 L 65.241094 34.833 L 65.756719 34.211906 L 66.268438 33.590812 L 66.780156 33.133781 L 67.295781 32.965812 L 67.8075 33.133781 L 68.323125 33.590812 L 68.834844 34.211906 L 69.350469 34.833 L 69.862188 35.290031 L 70.377813 35.458 L 70.889531 35.290031 L 71.405156 34.833 L 71.916875 34.211906 L 72.4325 33.590812 L 72.944219 33.133781 L 73.455938 32.965812 L 74.487188 34.211906 \" transform=\"matrix(1,0,0,-1,18.38,68.958)\"/>\n<g style=\"fill:rgb(0%,0%,0%);fill-opacity:1;\">\n  <use xlink:href=\"#glyph0-2\" x=\"68.441\" y=\"29.289\"/>\n</g>\n<path style=\"fill:none;stroke-width:0.3985;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 98.069219 60.438469 L 74.487188 34.211906 \" transform=\"matrix(1,0,0,-1,18.38,68.958)\"/>\n<path style=\" stroke:none;fill-rule:nonzero;fill:rgb(0%,0%,0%);fill-opacity:1;\" d=\"M 102.207031 24.359375 L 108.648438 21.28125 L 104.585938 17.628906 Z M 102.207031 24.359375 \"/>\n<path style=\"fill:none;stroke-width:0.3985;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 74.487188 34.211906 L 97.702031 8.5205 \" transform=\"matrix(1,0,0,-1,18.38,68.958)\"/>\n<path style=\" stroke:none;fill-rule:nonzero;fill:rgb(0%,0%,0%);fill-opacity:1;\" d=\"M 106.933594 50.3125 L 104.539062 43.585938 L 100.484375 47.25 Z M 106.933594 50.3125 \"/>\n<g style=\"fill:rgb(0%,0%,0%);fill-opacity:1;\">\n  <use xlink:href=\"#glyph0-3\" x=\"12.698\" y=\"72.924\"/>\n</g>\n<g style=\"fill:rgb(0%,0%,0%);fill-opacity:1;\">\n  <use xlink:href=\"#glyph1-1\" x=\"17.337\" y=\"69.309\"/>\n</g>\n<g style=\"fill:rgb(0%,0%,0%);fill-opacity:1;\">\n  <use xlink:href=\"#glyph0-3\" x=\"12.511\" y=\"4.036\"/>\n</g>\n<g style=\"fill:rgb(0%,0%,0%);fill-opacity:1;\">\n  <use xlink:href=\"#glyph2-1\" x=\"17.149\" y=\"0.421\"/>\n</g>\n<g style=\"fill:rgb(0%,0%,0%);fill-opacity:1;\">\n  <use xlink:href=\"#glyph0-4\" x=\"117.743\" y=\"3.064\"/>\n</g>\n<g clip-path=\"url(#clip1)\" clip-rule=\"nonzero\">\n<g style=\"fill:rgb(0%,0%,0%);fill-opacity:1;\">\n  <use xlink:href=\"#glyph2-1\" x=\"123.746\" y=\"-0.552\"/>\n</g>\n</g>\n<g style=\"fill:rgb(0%,0%,0%);fill-opacity:1;\">\n  <use xlink:href=\"#glyph0-4\" x=\"117.358\" y=\"71.89\"/>\n</g>\n<g clip-path=\"url(#clip2)\" clip-rule=\"nonzero\">\n<g style=\"fill:rgb(0%,0%,0%);fill-opacity:1;\">\n  <use xlink:href=\"#glyph1-1\" x=\"123.361\" y=\"68.274\"/>\n</g>\n</g>\n</g>\n</svg>",
+      "text/plain": [
+       "<IPython.core.display.SVG object>"
+      ]
+     },
+     "metadata": {}
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "source": [
+    "tikz.cleanup()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "del tikz"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.8.5",
+   "version": "3.9.7",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -57,10 +122,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
+   "display_name": "Python 3.9.7 64-bit ('feyn': conda)"
   },
   "interpreter": {
-   "hash": "cb415529c3b446cd5ca1eb46a1bc560260efe8bdfadabb86beaeb2edbe87a219"
+   "hash": "f047976d96830ccd9aa0ffbda63c977de59306d252bea23679e57d8d6e1dc45c"
   }
  },
  "nbformat": 4,
